--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-:root {
+:root 
+{
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -88,23 +89,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.gallery{
-	align-content: center;
-
-}
-
-.gallery img{
-	width: 220px;
-	padding: 5px;
-	filter: grayscale(60%);
-	transition: 0.5s;
-}
-
-.gallery img:hover{
-	filter: grayscale(0);
-	transform: scale(1.1);
+	
 }
 
 hr {
@@ -505,7 +490,22 @@ progress {
 [hidden] {
   display: none !important;
 }
+.gallery{
+	align-content: center;
 
+}
+
+.gallery img{
+	width: 220px;
+	padding: 5px;
+	filter: grayscale(60%);
+	transition: 0.5s;
+}
+
+.gallery img:hover{
+	filter: grayscale(0);
+	transform: scale(1.1);
+}
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
